finished lesson practice

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>IntersectionObserver</title>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
@@ -15,44 +15,44 @@
 Створіть HTML-сторінку, що містить список з 10 елементів li. Кожен елемент li містить картинку та назву фрукту. -->
     <ul class="fruits-list">
         <li>
-            <img src="./img/cat1.png" alt="cat 1">
-            <h3>Cat 1</h3>
+            <img src="./img/cat1.png" data-alt-src="./img/dog1.png" alt="pet 1">
+            <h3>Pet 1</h3>
         </li>
         <li>
-            <img src="./img/cat2.png" alt="cat 2">
-            <h3>Cat 2</h3>
+            <img src="./img/cat2.png" data-alt-src="./img/dog2.png" alt="pet 2">
+            <h3>Pet 2</h3>
         </li>
         <li>
-            <img src="./img/cat3.png" alt="cat 1">
-            <h3>Cat 3</h3>
+            <img src="./img/cat3.png" data-alt-src="./img/dog3.png" alt="pet 3">
+            <h3>Pet 3</h3>
         </li>
         <li>
-            <img src="./img/cat4.png" alt="cat 2">
-            <h3>Cat 4</h3>
+            <img src="./img/cat4.png" data-alt-src="./img/dog4.png" alt="pet 4">
+            <h3>Pet 4</h3>
         </li>
         <li>
-            <img src="./img/cat5.png" alt="cat 1">
-            <h3>Cat 5</h3>
+            <img src="./img/cat5.png" data-alt-src="./img/dog5.png" alt="pet 5">
+            <h3>Pet 5</h3>
         </li>
         <li>
-            <img src="./img/cat6.png" alt="cat 2">
-            <h3>Cat 6</h3>
+            <img src="./img/cat6.png" data-alt-src="./img/dog6.png" alt="pet 6">
+            <h3>Pet 6</h3>
         </li>
         <li>
-            <img src="./img/cat7.png" alt="cat 1">
-            <h3>Cat 7</h3>
+            <img src="./img/cat7.png" data-alt-src="./img/dog7.png" alt="pet 7">
+            <h3>Pet 7</h3>
         </li>
         <li>
-            <img src="./img/cat8.png" alt="cat 2">
-            <h3>Cat 8</h3>
+            <img src="./img/cat8.png" data-alt-src="./img/dog8.png" alt="pet 8">
+            <h3>Pet 8</h3>
         </li>
         <li>
-            <img src="./img/cat9.png" alt="cat 1">
-            <h3>Cat 9</h3>
+            <img src="./img/cat9.png" data-alt-src="./img/dog9.png" alt="pet 9">
+            <h3>Pet 9</h3>
         </li>
         <li>
-            <img src="./img/cat10.png" alt="cat 2">
-            <h3>Cat 10</h3>
+            <img src="./img/cat10.png" data-alt-src="./img/dog10.png" alt="pet 10">
+            <h3>Pet 10</h3>
         </li>
   <!-- Додайте інші елементи li для інших фруктів -->
     </ul>
